# steam-bulk-uninstaller

./: LICENSE  README.md  pyproject.toml
steam_uninstaller/: __init__.py  main.py  steam.py  tui.py  uninstaller.py
